--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -57,10 +57,10 @@
       <span class="close"></span>
       <div class="modal-body">
         <form
+        id="reserve"
         name="reserve"
         action="index.html"
         method="get"
-        onsubmit="return validate();"
         >
         <div
         class="formData">
@@ -71,7 +71,6 @@
         id="first"
         name="first"
         minlength="2"
-        required
         /><br>
       </div>
       <div
@@ -83,7 +82,6 @@
       id="last"
       name="last"
       minlength="2"
-      required
       /><br>
     </div>
     <div
@@ -199,7 +197,7 @@ checked
           <input class="checkbox-input" type="checkbox" id="checkbox2" />
           <label class="checkbox2-label" for="checkbox2">
             <span class="checkbox-icon"></span>
-            Je Je souhaite être prévenu des prochains évènements.
+            Je souhaite être prévenu des prochains évènements.
           </label>
           <br>
         </div>
