#5  correction css image et headline

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -50,12 +50,17 @@
     <button class="btn-signup modal-btn">
       je m'inscris
     </button>
-  </div>
-  
+  </div> 
   <div class="bground">
     <div class="content">
       <span class="close"></span>
       <div class="modal-body">
+        <!-- <div id="validation-message">
+          <div class ="content"> 
+            Merci! votre réservation <br>a été reçue.
+          </div>
+          <button type="button" class="btn-submit" onclick= "submitForm()"> Fermer </button>
+        </div> -->
         <form
         id="reserve"
         name="reserve"
