#4 validation du formulaire + message + correction de la fonction getAge

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -55,12 +55,12 @@
     <div class="content">
       <span class="close"></span>
       <div class="modal-body">
-        <!-- <div id="validation-message">
+        <div id="validation-message">
           <div class ="content"> 
-            Merci! votre réservation <br>a été reçue.
+            Merci pour votre inscription
           </div>
-          <button type="button" class="btn-submit" onclick= "submitForm()"> Fermer </button>
-        </div> -->
+          <button type="submit" class="button btn-send"> Fermer </button>
+        </div>
         <form
         id="reserve"
         name="reserve"
@@ -184,8 +184,7 @@ checked
             <span class="checkbox-icon"></span>
             Portland</label
             >
-          </div>
-          
+          </div> 
           <div
           class="formData">
           <input
@@ -207,10 +206,10 @@ checked
           <br>
         </div>
         <input id="submit"
-        class="btn-submit"
+        class="button btn-submit"
         type="submit"
-        class="button"
         value="C'est parti"
+        name="plop"
         />
       </form>
     </div>
