Ajout de la fonction validateConditions et correction du css

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -56,8 +56,8 @@
       <span class="close"></span>
       <div class="modal-body">
         <div id="validation-message">
-          <div class ="content"> 
-            Merci pour votre inscription
+          <div class ="content validation-text"> 
+            Merci pour<br> votre inscription
           </div>
           <button type="submit" class="button btn-send"> Fermer </button>
         </div>
@@ -191,6 +191,7 @@ checked
           class="checkbox-input"
           type="checkbox"
           id="checkbox1"
+          name="checkbox1"
           checked
           />
           <label class="checkbox2-label" for="checkbox1" required>
